update readme with live instructions, update docker-comopse file to build the local code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: "2"
 
 services:
   docs:
-    image: kryptnostic/slate
+    build: .
+    # image: kryptnostic/slate
     ports:
       - "4567:4567"
